<resources>

    <string name="app_name">Mobile Canteen</string>

    <!-- LOGIN ACTIVITY -->
    <string name="act_login_label">Login</string>
    <string name="act_login_number">Numero de estudante</string>
    <string name="act_login_password">Password</string>
    <string name="act_login_button_login">Login</string>
    <string name="title_activity_menu">MenuActivity</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_ementas">Ementas</string>
    <string name="navigation_drawer_rsenhas">Reservar Senhas</string>
    <string name="navigation_drawer_faturas">Faturas</string>
    <string name="navigation_drawer_divida">Consultar divida</string>
    <string name="navigation_drawer_logout">Logout</string>

    <string name="action_settings">Settings</string>

    <!-- ITEM DA FATURA LISTVIEW -->
    <string name="item_fatura_data">Data: </string>
    <string name="item_fatura_refeicao">Refeição: </string>
    <string name="item_fatura_prato">Prato: </string>
    <string name="item_fatura_preco">Preço: </string>
    <string name="item_fatura_cantina">Cantina #</string>

    <!-- ITEM DA EMENTA LISTVIEW -->
    <string name="item_ementa_dia">Dia da Semana: </string>
    <string name="item_ementa_data">Data: </string>
    <string name="item_ementa_refeicao">Refeição: </string>
    <string name="item_ementa_sopa">Sopa: </string>
    <string name="item_ementa_carne">Carne: </string>
    <string name="item_ementa_peixe">Peixe: </string>
    <string name="item_ementa_vegetariano">Vegetariano: </string>
    <string name="item_ementa_sobremesa">Sobremesa: </string>


    <!-- FATURAS -->
    <string name="faturasList_label">Faturas</string>

    <!-- MENU PRINCIPAL -->
    <string name="menu_label">Ementa Do Dia</string>

    <!-- EMENTAS -->
    <string name="ementas_label">Ementas</string>

    <!-- RESERVAR SENHAS -->
    <string name="reservar_senhas_label">Reservar Senhas</string>
    <string name="reservar_senhas_escolherdia">Escolha o dia</string>
    <string name="reservar_senhas_button">Reservar senha</string>
    <string name="reservar_senhas_price">O preço de uma refeição é de 2.40€. Será adicionado 0.50€ se reservar senha no mesmo dia</string>
    <string name="reservar_senhas_escolherrefeicao">Escolha a refeição</string>
    <string name="reservar_senhas_escolherprato">Escolha o prato</string>

    <string-array name="diasdesemana">
        <item>Segunda</item>
        <item>Terça</item>
        <item>Quarta</item>
        <item>Quinta</item>
        <item>Sexta</item>
    </string-array>

    <string-array name="refeicao">
        <item>Almoço</item>
        <item>Jantar</item>
    </string-array>

    <string-array name="prato">
        <item>Carne</item>
        <item>Peixe</item>
        <item>Vegetariano</item>
    </string-array>

    <!-- Consultar Divida -->
    <string name="consuldar_divida_label">Divida</string>
    <string name="consuldar_divida_numero">Número: </string>
    <string name="consuldar_divida_divida">Deve: </string>
</resources>
