<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ementas"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/navigation_drawer_ementas" />
        <item
            android:id="@+id/nav_reservar_senhas"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/navigation_drawer_rsenhas" />
        <item
            android:id="@+id/nav_consultar_faturas"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_faturas" />
        <item
            android:id="@+id/nav_consultar_divida"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navigation_drawer_divida" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/navigation_drawer_logout" />
    </group>
</menu>
