<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">


    <TextView
        android:text="@string/item_ementa_dia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDiaDaSemanaTitle"
        android:textStyle="normal|bold"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDiaMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12dp" />

    <TextView
        android:text="@string/item_ementa_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewDataTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDataMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_refeicao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewRefeicaoTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewRefeicaoMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_sopa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewSopaTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSopaMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_carne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewCarneTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewCarneMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_peixe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewPeixeTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewPeixeMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_vegetariano"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewVegetarianoTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewVegetarianoMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />

    <TextView
        android:text="@string/item_ementa_sobremesa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textSize="20sp"
        android:id="@+id/textViewSobremesaTitle" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewSobremesaMenu" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="12sp" />
</LinearLayout>