<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.ementas.projecto.LoginActivity"
    android:weightSum="1">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="114dp"
        app:srcCompat="@drawable/mobilecanteenlogo"
        android:id="@+id/imageView3"
        android:layout_weight="0.08" />

    <TextView
        android:text="@string/act_login_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextNumber"
        android:inputType="number" />

    <TextView
        android:text="@string/act_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword" />

    <Button
        android:hint="@string/act_login_button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonLogin" />
</LinearLayout>
